functions for activity add, create, delete

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,8 +5,7 @@
 @import "club";
 @import "sign_up";
 @import "search_bar";
-@import "my_clubs";
+@import "account";
 @import "new";
 @import "profile";
 @import "my_activities";
-
