--- a/app/assets/stylesheets/pages/_account.scss
+++ b/app/assets/stylesheets/pages/_account.scss
@@ -268,11 +268,12 @@ h4 {
   display: flex;
   gap: 10px; /* Add some space between the buttons */
   margin-right: 10px;
+  margin-left: 21px;
 }
 
 .create-button {
   padding-top: 25px;
-  padding-left: 21px;
+  padding-left: 6px;
 }
 
 .edit-button {
@@ -306,6 +307,13 @@ h4 {
   gap:10px;
   margin-top:20px;
   margin-bottom: 20px;
+}
+
+.edit-delete-button {
+  display: flex;
+  justify-content: space-between;
+  gap:10px;
+
 }
 
 .edit-dojo-button {
