--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,1 +1,45 @@
-<h1>Activities edit 🥷</h1>
+<%= link_to root_path, class: 'back-button' do %>
+  <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
+  Back
+<% end %>
+<div class='form-container'>
+  <h2>Edit Activity</h2>
+
+
+
+  <%= simple_form_for [@club, @activity] do |f| %>
+    <div>
+      <%= f.input :title %>
+    </div>
+    <div>
+      <%= f.input :description %>
+    </div>
+    <div>
+    <%= f.input :teacher %>
+    </div>
+    <div>
+    <%= f.input :address %>
+    </div>
+    <div>
+    <%= f.input :limit %>
+    </div>
+    <div>
+    <%= f.input :event_time %>
+    </div>
+    <div>
+    <%= f.input :duration %>
+    </div>
+    <div>
+    <%= f.input :category%>
+    </div>
+    <div>
+      <%= f.input :image, as: :file %>
+    </div>
+    <div>
+      <%= f.button :submit, 'Edit Activity' %>
+    </div>
+  <% end %>
+
+
+  <%= render "shared/navbar" %>
+</div>
