--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -8,6 +8,7 @@
   align-items: flex-start;
   background-color: #f9f9f9;
   padding-left: 17px;
+  padding-right: 22px;
 }
 
   .profile-title {
@@ -61,11 +62,10 @@
     flex: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
     padding: 3px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 
   .review-h4-text h4,
@@ -85,6 +85,8 @@
 
   .days-on-dojo-number {
     font-size: 18px;
+    padding-bottom: 0px;
+    margin-bottom: -6px;
   }
 
 
@@ -100,6 +102,7 @@
   .days-on-dojo p {
     font-size: 18px;
     color: #5a5a5a;
+    margin-top: -15px;
   }
 
 
@@ -185,9 +188,9 @@
     font-weight: bold;
     text-align: center;
     padding: 5px 12px;
-    border-radius: 25px; /* Rounded corners */
+    border-radius: 9px;
     text-decoration: none;
-    margin-top: -1px;
+    margin-top: 2px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s ease, transform 0.2s ease;
   }
