--- a/app/assets/stylesheets/pages/_sign_up.scss
+++ b/app/assets/stylesheets/pages/_sign_up.scss
@@ -1,3 +1,4 @@
+
 .form-inputs {
   display: flex;
   flex-direction: column;
@@ -9,6 +10,7 @@
   font-size: 1rem;
   border-radius: 5px;
   border: 1px solid #ccc;
+  margin-left: 18px;
 }
 
 .form-inputs label {
@@ -18,4 +20,8 @@
 
 input.text::placeholder {
   color: rgba(155, 153, 153, 0.705);
+}
+
+.form-inputs mx-auto {
+  margin-left: 42px;
 }
