Model, Routes and Controller for messages

--- a/app/assets/stylesheets/pages/_account.scss
+++ b/app/assets/stylesheets/pages/_account.scss
@@ -81,7 +81,6 @@ body {
   margin-left: 12px;
 }
 
-
 .btn {
   height:40px;
 
@@ -89,7 +88,7 @@ body {
   border-radius: 28px;
 }
 
-h4 {
+.account-titles {
   padding: 27px;
   font-family: "Roboto", serif;
   font-weight: 500;
