--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -110,9 +110,10 @@ body {
 
 .location-tag {
   color: white;
-  max-width: 200px;
-  word-break: break-word;
+  font-size: 14px;
   display: flex;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 .instagram-tag {
@@ -122,15 +123,9 @@ body {
 }
 
 .phone-tag {
+  padding-left: 5vh;
   max-width: 200px;
   display: flex;
-}
-
-.club-icon-text {
-  color: white;
-  margin-left: 5px;
-  font-size: 15px;
-  margin-top:4px;
 }
 
 .fa-solid {
@@ -157,11 +152,10 @@ map {
 
 
 
-.map-container {
-  width: 300px; /* Adjust the width as needed */
-  height: 300px; /* Adjust the height as needed */
-  margin-left: 20px; /* Add some space between the social links and the map */
-}
+// .map-container {
+//   width: 25vh;
+//   height: 25vh;
+// }
 
 
 // .map {
@@ -183,7 +177,7 @@ map {
 // }
 
 #clubmap-container {
-  height: 22vh;
+  height: 18vh;
   z-index: 0;
   margin: 10px;
   border-radius: 10px;
@@ -196,12 +190,53 @@ map {
   margin-top: 10px;
 }
 
-#activities-index {
-  margin-top: 33px;
-  margin-bottom: 62px;
+#club-activities-index {
+  margin-top: 3vh;
+  margin-bottom: 10vh;
 }
 
 .activities-title-index {
   margin-top: 4vh;
   font-weight: bold;
+}
+
+#club-activities-feed-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1px;
+}
+
+.activities-title-index {
+  margin: 0;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+  color: black;
+  background-color: white;
+  transition: all 0.3s ease;
+  border: none;
+}
+
+.activities-title-index.active {
+  background-color: #A7E6FF;
+}
+
+#club-description {
+  font-size: 14px;
+}
+
+.club-address-ig-phone {
+  margin-top: 2vh;
+}
+
+.club-ig-phone {
+  display: flex;
+  justify-content: start;
+}
+
+.club-icon-text {
+  padding-left: 2vh;
 }
