--- a/app/assets/stylesheets/pages/_my_activities.scss
+++ b/app/assets/stylesheets/pages/_my_activities.scss
@@ -11,7 +11,7 @@
   display: flex;
   font-size: 14px;
   margin-top: 3vh;
-  margin-bottom: 58px;
+  margin-bottom: 2vh;
 }
 
 .my_activities-cards-text {
