--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -3,7 +3,7 @@
   Back
   <% end %>
 <div class="activity-image" style="position: relative;">
-  <%= image_tag "man_boxing.png", alt: 'uploaded-club-image', class: 'club-img' %>
+  <%= image_tag @club.image_url, alt: 'uploaded-club-image', class: 'club-img' %>
 
 </div>
 
