--- a/app/assets/stylesheets/pages/_account.scss
+++ b/app/assets/stylesheets/pages/_account.scss
@@ -256,8 +256,8 @@ body {
   flex: 1;
   padding-left: 15px;
   display: flex;
-  flex-direction: column; /* Align children vertically */
-  justify-content: center; /* Center children vertically */
+  flex-direction: column;
+  justify-content: center;
   font-family: "Roboto", serif;
   font-weight: 100;
   font-style: normal;
@@ -265,9 +265,9 @@ body {
 
 .manage-buttons {
   display: flex;
-  gap: 10px; /* Add some space between the buttons */
+  gap: 10px;
   margin-right: 10px;
-  margin-left: 77px;
+  margin-left: 20px;
 }
 
 .create-button {
@@ -276,12 +276,12 @@ body {
 }
 
 .edit-button {
-  width: 20px; /* Adjust the width as needed */
+  width: 20px;
   height: 28px;
 }
 .delete-button-img {
-  width: 27px; /* Adjust the width as needed */
-  height: 27px; /* Adjust the height as needed */
+  width: 27px;
+  height: 27px;
   color: red;
 }
 
