--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -2,44 +2,48 @@
   <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
   Back
 <% end %>
-<div class='form-container'>
-  <h2>Create an Activity</h2>
+
+
+<div class='form-container' data-controller='focus'>
+  <h2 class="edit-activity" data-focus-target='heading'>Create an Activity</h2>
 
 
 
-  <%= simple_form_for [@club, @activity] do |f| %>
-    <div>
-      <%= f.input :title %>
+  <%= simple_form_for [@club, @activity], html: { class: 'form-horizontal' } do |f| %>
+  <div class='form-container'>
+    <div class="form-group">
+    <%= f.input :title, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :description, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :teacher, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :address, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :event_time, as: :string, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus", controller: "flatpickr" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :duration, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :category, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <%= f.input :image, as: :file, input_html: { class: 'form-control-file', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.button :submit, 'Create Activity', class: 'btn btn-primary' %>
     </div>
-    <div>
-      <%= f.input :description %>
-    </div>
-    <div>
-    <%= f.input :teacher %>
-    </div>
-    <div>
-    <%= f.input :address %>
-    </div>
-    <div>
-    <%= f.input :limit %>
-    </div>
-    <div>
-    <%= f.input :event_time %>
-    </div>
-    <div>
-    <%= f.input :duration %>
-    </div>
-    <div>
-    <%= f.input :category%>
-    </div>
-    <div>
-      <%= f.input :image, as: :file %>
-    </div>
-    <div>
-      <%= f.button :submit, 'Create Activity' %>
-    </div>
+  </div>
+  </div>
   <% end %>
 
-
-  <%= render "shared/navbar" %>
+ <img src="<%= asset_path('yingyang.gif') %>" alt="Ying Yang" data-focus-target="indicator" style="position: absolute; top: 0; left: 0; padding-top: 5px; width: 30px; transition: top 0.3s, left 0.3s;">
 </div>
+
+<%= render "shared/navbar" %>
