--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,35 @@
-<h2 class="text-center"><strong>Sign up</strong></h2>
-  <div class="container mt-5 mx-auto">
-    <div class="row justify-content-center">
-      <div class="col-lg-6 col-md-8 col-sm-10">
-        <div class="card shadow-lg border-0">
-          <div class="card-header bg-white text-black text-center">
-
-            <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-              <%= f.error_notification %>
-
-              <div class="form-inputs mx-auto">
-                <%= f.input :first_name,
-                             required: true,
-                             input_html: { placeholder: "Your first name", class: "text mx-auto" } %>
-
-                <%= f.input :last_name,
-                             required: true,
-                             input_html: { placeholder: "Your last name", class: "text mx-auto" } %>
-
-                <%= f.input :username,
-                             required: true,
-                             input_html: { placeholder: "Choose a username", class: "text mx-auto" } %>
-
-                 <%= f.input :email,
-                              required: true,
-                              autofocus: true,
-                              input_html: { autocomplete: "email", placeholder: "Your email address", class: "text mx-auto" } %>
-
-                 <%= f.input :password,
-                              required: true,
-                              hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                              input_html: { autocomplete: "new-password", placeholder: "Create a password", class: "text mx-auto" } %>
-
-                 <%= f.input :password_confirmation,
-                              required: true,
-                              input_html: { autocomplete: "new-password", placeholder: "Confirm your password", class: "text mx-auto" } %>
-             </div>
-
-              <div class="form-actions">
-                <%= f.button :submit, "Sign up" %>
-              </div>
-            <% end %>
-
-            <%= render "devise/shared/links" %>
-          </div>
+<div class='form-container' data-controller='focus'>
+  <h2 class="edit-activity" data-focus-target='heading'>Sign Up</h2>
+     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f| %>
+     <%= f.error_notification %>
+      <div class='form-container'>
+        <div class="form-group">
+        <%= f.input :first_name, required: true, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <%= f.input :last_name, required: true, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <%= f.input :username, required: true, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <%= f.input :email, required: true, autofocus: true, input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { class: 'form-control', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <%= f.input :password_confirmation, required: true, input_html: { class: 'form-control-file', data: { focus_target: "input", action: "focus->focus#focus" } }, wrapper_html: { class: 'col-sm-10' }, label_html: { class: 'col-sm-2 control-label' } %>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.button :submit, 'Sign Up', class: 'btn btn-primary' %>
         </div>
+      </div>
     </div>
-  </div>
+  <% end %>
+
+  <img src="<%= asset_path('yingyang.gif') %>" alt="Ying Yang" data-focus-target="indicator" style="position: absolute; top: 0; left: 0; padding-top: 5px; width: 30px; transition: top 0.3s, left 0.3s;">
+</div>
+
+ <%= render "devise/shared/links" %>
