image upload is broken

--- a/app/views/clubs/new.html.erb
+++ b/app/views/clubs/new.html.erb
@@ -21,7 +21,7 @@
   <%= f.input :IBAN %>
   </div>
   <div>
-    <%= f.input :image, as: :file %>
+    <%= f.input :image_url %>
   </div>
   <div>
     <%= f.button :submit, 'Create Club' %>
