--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -112,6 +112,7 @@ a.mapboxgl-ctrl-logo {
   margin: 0 auto;
   display: block;
   padding-bottom: 1vh;
+  margin-top: -30px;
 }
 
 #map-container {
