--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,8 +1,10 @@
 <div class="search-container">
   <%= form_with(url: activities_path, method: :get, class: 'd-flex flex-column align-items-center') do %>
-    <%= image_tag "search.png", class: "search_picture" %>
-    <%= text_field_tag :location, params[:location], class: 'form-control mb-2 rounded-3 ps-5', placeholder: 'Enter your location' %>
-    <%= text_field_tag :date, params[:date], as: :string, class: 'form-control mb-2 rounded-3 ps-5 datepicker d-none', placeholder: 'Select a date', data: { controller: "flatpickr" } %>
-    <%= submit_tag "Search", name: "", id: "search-button", class: 'btn btn-primary small-btn' %>
+    <div class="search-bar-box">
+      <%= image_tag "search.png", class: "search_picture" %>
+      <%= text_field_tag :location, params[:location], class: 'inputBox', placeholder: 'Enter your location' %>
+      <%= text_field_tag :date, params[:date], as: :string, class: 'form-control mb-2 rounded-3 ps-5 datepicker d-none', placeholder: 'Select a date', data: { controller: "flatpickr" } %>
+      <%= submit_tag "Search", name: "", id: "search-button", class: 'btn btn-primary small-btn' %>
+    </div>
   <% end %>
 </div>
