--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,12 +5,32 @@ body.home-page {
 }
 
 .home-body {
-
+  display:flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   padding-top: 85px;
   padding-bottom: 85px;
   padding-left: 40px;
   padding-right: 40px;
+  justify-content: space-between;
+  height: 64vh;
+}
+
+.typed-container {
+  margin-bottom: 20px;
+
+}
+
+.typed-container span[data-controller='typed'] {
+  font-size: 24px; /* Increase the font size */
+  font-weight: bold; /* Optional: Make the text bold */
+  color: #e6e6e6; /* Optional: Change the text color */
+}
+
+.search-bar {
+  width: 100%;
+  max-width: 600px;
 }
 
 .badge {
@@ -87,6 +107,7 @@ body.home-page {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 75px;
 }
 
 
