--- a/app/views/activities/_markers.html.erb
+++ b/app/views/activities/_markers.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "ninja.png", height: 30, width: 30, alt: "Boxing logo" %>
+<%= image_tag "ninja.png", height: 30, width: 30, alt: "Boxing logo", class: 'map-marker'%>
