--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,8 @@
+<%= link_to account_path, class: 'back-button' do %>
+  <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
+  Back
+  <% end %>
+
 <div class="container-profile-info">
   <div class="profile-page">
     <h1 class="profile-title">Profile</h1>
