Seeds on Steroids

--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -203,7 +203,7 @@ body {
 .navbottom {
   margin-top: 40px;
   display: flex;
-  justify-content: space-around;
+  justify-content: end;
   gap: 10px;
   position: fixed;
   bottom: 0;
