--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 <div class="activity-image" style="position: relative;">
 
-    <%= image_tag @club.image_url, alt: 'uploaded-club-image', class: 'club-img' %>
+    <%= cl_image_tag @club.image.key, alt: 'uploaded-club-image', class: 'club-img' %>
 
 </div>
 
@@ -125,9 +125,8 @@
           <span class="day-header"><%= date.strftime("%B %d, %Y") %></span>
         <% end %>
       </div>
-    <% end %>
 
-    <% @messages.each do |message| %>
+    <% messages.sort_by(&:created_at).each do |message| %>
       <div class="feed-user-message">
         <div class="feed-username-time">
           <p><strong><%= message.user.username %></strong></p>
@@ -136,6 +135,7 @@
         <p><%= message.content %></p>
       </div>
     <% end %>
+  <% end %>
 
     <div id="club-feed" class="club-feed-form">
       <form action="<%= club_messages_path(@club) %>" method="post" class="club-feed-inner">
