clubpage and feedbakc

--- a/app/assets/stylesheets/pages/_search_bar.scss
+++ b/app/assets/stylesheets/pages/_search_bar.scss
@@ -71,6 +71,10 @@ padding-left: 15px;
   transform: scale(1.2);
 }
 
+// .map-button {
+//   z-index: 10;
+// }
+
 .overlay {
   position: fixed;
   top: 0;
