--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -48,6 +48,21 @@ body {
   overflow: hidden;
 }
 
+.positive-feedbacks-container {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.85);
+  padding: 5px 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+
+
 .club-img {
   width: 100%;
   height: 100%;
@@ -55,7 +70,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .club-details {
