--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -23,25 +23,28 @@
    <p class="activity-address"><%= @activity.address %></p>
     <p class="activity-time"><%= @activity.event_time.strftime("%a %b %e at %l:%M %p") %> (duration: <%= @activity.duration %>h)</p>
 
-<div class="rating-box">
-  <!-- Left Section -->
-  <div class="rating-left">
-    <span class="rating-number"><%= @positive_feedback_count %></span>
-    <%=image_tag "thumbs-up.svg", class: "thumbs_up"%>
-  </div>
+  <% if @activity.event_time < Time.current %>
+    <div class="rating-box">
+      <!-- Left Section -->
+      <div class="rating-left">
+        <span class="rating-number"><%= @positive_feedback_count %></span>
+        <%=image_tag "thumbs-up.svg", class: "thumbs_up"%>
+      </div>
 
-  <!-- Middle Section -->
-  <div class="rating-middle">
-    <span class="rating-number"><%= @negative_feedback_count %></span>
-    <%=image_tag "thumbs-down.svg", class: "thumbs_down"%>
-  </div>
+      <!-- Middle Section -->
+      <div class="rating-middle">
+        <span class="rating-number"><%= @negative_feedback_count %></span>
+        <%=image_tag "thumb-down.svg", class: "thumbs_down"%>
+      </div>
 
-  <!-- Right Section -->
-  <div class="rating-right">
-    <span class="rating-number"><%= @positive_feedback_count + @negative_feedback_count %></span>
-    <p>Feedbacks</p>
-  </div>
-</div>
+      <!-- Right Section -->
+      <div class="rating-right">
+        <span class="rating-number"><%= @positive_feedback_count + @negative_feedback_count %></span>
+        <p>Feedbacks</p>
+      </div>
+    </div>
+  <% end %>
+
     <!-- Description Section -->
     <p class="activity-description">
       <%= @activity.description %>
