--- a/app/views/activities/my_activities.html.erb
+++ b/app/views/activities/my_activities.html.erb
@@ -37,7 +37,7 @@
               <%= simple_form_for([activity, @feedback], url: activity_feedbacks_path(activity), method: :post, html: { class: "feedback-form" }) do |f| %>
                 <%= f.hidden_field :appreciation, value: true %>
                 <button type="submit" class="thumb-button">
-                  <img src="/assets/thumb-up.svg" alt="Thumb Up">
+                  <%= image_tag 'thumb-up.svg', alt: 'Thumb Up' %>
                 </button>
               <% end %>
 
@@ -46,7 +46,7 @@
               <%= simple_form_for([activity, Feedback.new], url: activity_feedbacks_path(activity), method: :post, html: { class: "feedback-form" }) do |f| %>
                 <%= f.hidden_field :appreciation, value: false %>
                 <button type="submit" class="thumb-button">
-                  <%= image_tag 'thumb-down.svg'  alt="Thumb Down" %>
+                  <%= image_tag 'thumb-down.svg',  alt: "Thumb Down" %>
                 </button>
               <% end %>
           <% end %>
